<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/view_Signup_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_person_white_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Signup_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtSignup_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:singleLine="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_Signup_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Signup_first_name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_person_white_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Signup_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtSignup_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_Signup_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Signup_last_name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_call_white_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Signup_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtSignup_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_Date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Signup_mobile_no"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_date_range_white_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtDate_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:inputType="date|datetime"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/view_Medical_aid_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Date_of_birth"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_local_hospital_white_24dp" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spnMedical_aid_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:hint="Medical aid provider"
                android:textSize="16sp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="@color/colorPrimary"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/colorPrimary"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/colorPrimary"
                app:ms_floatingLabelText="Security Company"
                app:ms_hint="Medical aid provider"
                app:ms_hintColor="@color/colorPrimary"
                app:ms_multiline="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_Medical_aid_provider_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Medical_aid_provider"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_account_circle_white_24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtMedical_aid_provider_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medical_aid_no"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_Security_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Medical_aid_provider_no"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_add_alert_white_24dp" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spnSecurity_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:hint="Security Company"
                android:textSize="16sp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="@color/colorPrimary"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/colorPrimary"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/colorPrimary"
                app:ms_floatingLabelText="Security Company"
                app:ms_hint="Security Company"
                app:ms_hintColor="@color/colorPrimary"
                app:ms_multiline="false" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/Security_provider_contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_Security_provider"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_call_white_24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/edtSecurity_provider_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/security_provider_contact"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
